--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
    
+    <!-- Mapbox Stylesheet -->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.1/mapbox-gl.css' rel='stylesheet' />
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>Dashboard | cuHacking 2020</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
