--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
    
     <!-- Mapbox Stylesheet -->
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.1/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
